[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SYED RAZA ALI <144608213+Syed-Raza-Ali@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 